<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sayrio.myappportofolio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_heading"
            android:textColor="@color/colorTitle"
            android:layout_marginBottom="@dimen/text_heading_margin"
            android:text="@string/home_title" />

        <Button
            android:id="@+id/button_one"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_one"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorButtonText"
            android:background="@color/colorButton"
            android:layout_marginBottom="@dimen/button_margin" />

        <Button
            android:id="@+id/button_two"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_two"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorButtonText"
            android:background="@color/colorButton"
            android:layout_marginBottom="@dimen/button_margin" />

        <Button
            android:id="@+id/button_three"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_three"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorButtonText"
            android:background="@color/colorButton"
            android:layout_marginBottom="@dimen/button_margin" />

        <Button
            android:id="@+id/button_four"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_four"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorButtonText"
            android:background="@color/colorButton"
            android:layout_marginBottom="@dimen/button_margin" />

        <Button
            android:id="@+id/button_five"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_five"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorButtonText"
            android:background="@color/colorButton"
            android:layout_marginBottom="@dimen/button_margin" />

        <Button
            android:id="@+id/button_six"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_six"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/colorButtonText"
            android:background="@color/colorButtonAccent"
            android:layout_marginBottom="@dimen/button_margin" />

    </LinearLayout>

</ScrollView>
